# MapReduce-rs

./: .gitignore  Cargo.toml  README.md
src/: Makefile  lib.rs  start.sh  stop.sh
src/mr/: coordinator.rs  function.rs  mod.rs  worker.rs
