[package]
name = "map-reduce-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tarpc = { version = "0.33.0", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
serde = "1.0.175"
anyhow = "1.0.72"
rayon = "1.7.0"
futures = "0.3.28"